sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if (continuer = true){
                  ^